--- a/package.json
+++ b/package.json
@@ -6,12 +6,14 @@
     "start": "node /bin/www"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "dotenv": "6.1.0",
     "ejs": "~2.5.7",
     "express": "~4.16.0",
     "http-errors": "~1.6.2",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^5.7.5",
     "morgan": "~1.9.0"
   }
