--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 DB_HOST="mongodb+srv://talh:dsaq-1758@cluster0.mapzvx7.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0";
+JWT_SECRET="Strongstring"
