all changes finalized

--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 DB_HOST="mongodb+srv://talh:dsaq-1758@cluster0.mapzvx7.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0";
 JWT_SECRET="Strongstring"
+SET PORT=3001
