--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "~4.16.0",
     "http-errors": "~1.6.2",
     "jsonwebtoken": "^9.0.2",
+    "method-override": "^3.0.0",
     "mongoose": "^5.7.5",
     "morgan": "~1.9.0"
   }
